Completed calendar event creation, still need to check for 1st day of quarter glitch
