# backend/api/openapi.yaml
@@ -189,7 +189,7 @@ paths:
           schema:
             "$ref": "#/components/schemas/TermCode"
         - in: query
-          name: courseIDs
+          name: courseIDs[]
           required: true
           schema:
             type: array
@@ -219,7 +219,7 @@ paths:
           schema:
             "$ref": "#/components/schemas/TermCode"
         - in: query
-          name: courseIDs
+          name: courseIDs[]
           required: true
           schema:
             type: array
@@ -249,7 +249,7 @@ paths:
           schema:
             "$ref": "#/components/schemas/TermCode"
         - in: query
-          name: courseIDs
+          name: courseIDs[]
           required: true
           schema:
             type: array
@@ -292,7 +292,6 @@ components:
       additionalProperties: true
       required:
         - displayName
-        - email
       properties:
         displayName:
           type: string
